--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@
     .card-team {
       width: 70%;
     }
-    footer  p{
+    footer  p, footer h6{
       width: 100%;
       text-align: left;
     }
