--- a/contact.css
+++ b/contact.css
@@ -76,6 +76,8 @@ body {
 .ul-nav {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    line-height: 2.5rem;
 }
 
 .link-nav {
